2004-11-07  John Finlay  <finlay@moeraki.com>

	* gtk/gdk.override (_wrap_gdk_event_tp_setattr) Fix #157571 with
	slightly modified patch from rubensr.

2004-11-04  Johan Dahlin  <johan@gnome.org>
	
	* configure.in: post release version bump

=== PyGTK 2.4.1 ===
2004-11-04  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk.override (_wrap_gtk_dialog_add_buttons): Use
	PyTuple_GetSlice and PyArg_ParseTuple here, so we can get the same
	behavior as in add_button. Reported by Maciej Katafiasz, fixes #156707

	* tests/test_dialog.py: Add test for it

	* examples/gtk/filechooser.py: Fix typo

	* examples/gtk/uimanager.py: Simplify

	* tests/Makefile.am:
	* tests/gtype.py:
	* tests/test-thread.c:
	* tests/test-thread.h:
	* tests/test-unknown.c:
	* tests/test-unknown.h:
	* tests/test_unknown.py:
	* tests/testhelpermodule.c:

	Add tests for dynamic/unknown objects and interfaces.
	
2004-10-28  John Finlay  <finlay@moeraki.com>

	* gtk/gtk.defs (gtk_combo_box_set_model)
	(gtk_entry_completion_set_model) Allow model to be None and to
	default to None similar to gtk_tree_view_set_model.
	Fixes #155247 (Olivier Aubert).

2004-10-22  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtk.override (_wrap_gtk_alignment_new): Change all
	gtk.Alignment constructor parameter default values back to 0, as
	it was before pygtk 2.4.

2004-10-21  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtk.override (_wrap_gtk_adjustment_new): Change all
	gtk.Adjustment constructor parameter default values back to 0, as
	it was before pygtk 2.4.

2004-10-13  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gobject/pygobject.h: s/typename/typename_/, because typename is
	a C++ keyword.
	Add G_BEGIN_DECLS / G_END_DECLS.
	Fixes #155304: pygobject.h cannot be included in C++ programs.

2004-10-05  Johan Dahlin  <johan@gnome.org>

	* gtk/libglade.override (pyglade_xml_lookup_type): Fix silly silly